# recipe-decrapinator

./: .gitignore  LICENSE  README.md  decrapinator.py  recipe_output.json  setup.cfg  setup.py
recipe_decrapinator/: decrapinator.py
recipe_decrapinator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
recipe_decrapinator/schemas/: www.allrecipes.com.json
src/: decrapinator.py
src/recipe_decrapinator_christianjstarr.egg-info/: PKG-INFO  SOURCES.txt
