[metadata]
name = recipe-decrapinator-christianjstarr
version = 0.0.1
author = Christian Starr
author_email = christianjstarr@icloud.com
description = Recipe Decrapinator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christianjstarr/recipe-decrapinator
project_urls =
    Bug Tracker = https://github.com/christianjstarr/recipe-decrapinator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src